# notify-done

./: .gitignore  CLAUDE.md  Cargo.toml  notify-done.service
nd/: Cargo.toml
nd/src/: cli.rs  main.rs
notify-done-common/: Cargo.toml
notify-done-common/src/: lib.rs
notify-done-daemon/: Cargo.toml
notify-done-daemon/src/: config.rs  ebpf_loader.rs  event_processor.rs  main.rs  notifier.rs  process_tracker.rs  user_session.rs
notify-done-ebpf/: Cargo.toml  build.rs
notify-done-ebpf/.cargo/: config.toml
notify-done-ebpf/src/: main.rs
src/: main.rs
src/cli/: args.rs  mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/daemon/: client.rs  mod.rs  protocol.rs  registry.rs  server.rs
src/executor/: mod.rs  runner.rs
src/notification/: builder.rs  formatter.rs  mod.rs
systemd/: notify-done.service
xtask/: Cargo.toml
xtask/src/: main.rs
