[package]
name = "notify-done"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
humantime = "2.1"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
