[workspace]
resolver = "2"
members = [
    "xtask",
    "notify-done-common",
    "notify-done-daemon",
    "nd",
]
exclude = [
    "notify-done-ebpf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hugo/notify-done"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
thiserror = "2.0"

[profile.release]
lto = true
