[package]
name = "nd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nd"
path = "src/main.rs"

[dependencies]
notify-done-common = { path = "../notify-done-common", features = ["user"] }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
dirs = "5"
notify-rust = "4"
ctrlc = "3"
libc = "0.2"
